google font update

--- a/css/mutual.css
+++ b/css/mutual.css
@@ -44,44 +44,42 @@ body {
   background-color: var(--secondary);
 }
 /* FONTE */
-@font-face {
-  font-family: Poppins_Medium;
-  src: url(poppins-medium-webfont.woff2) format(woff2);
-}
-@font-face {
-  font-family: Poppins_Regular;
-  src: url(poppins-regular-webfont.woff2) format(woff2);
-}
 
 h1 {
   font-size: var(--font-lg);
   color: var(--brand_color);
-  font-family: "Poppins_Medium", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 h2 {
   font-size: var(--font-lg);
   color: var(--brand_color);
-  font-family: "Poppins_Medium", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 h3 {
   font-size: var(--font-md);
   color: var(--brand_color);
-  font-family: "Poppins_Medium", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 h4 {
   font-size: var(--font-sm);
   color: var(--brand_color);
-  font-family: "Poppins_Medium", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 h5 {
   font-size: var(--font-xxs);
   color: var(--brand_color);
-  font-family: "Poppins_Medium", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 p {
   font-size: var(--font-xs);
   color: var(--brand_color);
-  font-family: "Poppins_Regular", sans-serif;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
 }
 
 /* LOGO FONT*/
@@ -117,7 +115,17 @@ header a {
   padding-left: 80px;
   text-transform: uppercase;
   text-decoration: none;
-  font-family: "Poppins_Medium", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+header a:visited {
+  color: var(--brand_color);
+  font-size: 20px;
+  padding-left: 80px;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  text-decoration: solid;
 }
 
 /* burgermenu */
@@ -137,7 +145,8 @@ header a {
   display: none;
   font-size: 22px;
   color: var(--brand_color);
-  font-family: "Poppins_Regular", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
 }
 
 @media (max-width: 700px) {
