--- a/css/forside.css
+++ b/css/forside.css
@@ -25,7 +25,7 @@ section h2 {
 }
 .om_os {
   background-color: var(--tertiary);
-  padding: var(--space-sm);
+  padding: var(--space-xs);
 }
 .usp {
   border: 2px solid var(--brand_color);
@@ -33,16 +33,16 @@ section h2 {
   text-align: center;
   border-inline: 0;
 }
-
-.grid_1-2 {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+@media (min-width: 600px) {
+  .grid_1-2 {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+  .grid_1-2 img {
+    height: 340px;
+    width: 300px;
+  }
 }
-.grid_1-2 img {
-  height: 320px;
-  width: 300px;
-}
-
 /* Åbningstider */
 
 .gallery {
