--- a/css/om_bagt.css
+++ b/css/om_bagt.css
@@ -1,9 +1,9 @@
-.billede1{
+/*.billede1{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 60%;
-}
+}*/
 
 .overskrift {
     text-align: center;
