--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -107,12 +107,13 @@ main > *,
 }
 
 .strong {
-  font-weight: bold;
+  font-family: "Poppins_Medium", sans-serif;
+  font-weight: 800;
   text-align: center;
 }
 
 .grid_job a {
-  font-size: 20px;
+  font-size: 22px;
   color: black;
   text-decoration: none;
   font-family: "Poppins_Medium", sans-serif;
