--- a/css/mutual.css
+++ b/css/mutual.css
@@ -44,42 +44,80 @@ body {
   background-color: var(--secondary);
 }
 /* FONTE */
-
 h1 {
-  font-size: var(--font-lg);
+  font-size: 35px;
   color: var(--brand_color);
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
 h2 {
-  font-size: var(--font-lg);
+  font-size: 35px;
   color: var(--brand_color);
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
 h3 {
-  font-size: var(--font-md);
+  font-size: 30px;
   color: var(--brand_color);
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
 h4 {
-  font-size: var(--font-sm);
+  font-size: 20px;
   color: var(--brand_color);
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
 h5 {
-  font-size: var(--font-xxs);
+  font-size: 12px;
   color: var(--brand_color);
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
 p {
-  font-size: var(--font-xs);
+  font-size: 15px;
   color: var(--brand_color);
   font-weight: 400;
   font-family: "Poppins", sans-serif;
+}
+
+@media (min-width: 600px) {
+  h1 {
+    font-size: var(--font-lg);
+    color: var(--brand_color);
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+  }
+  h2 {
+    font-size: var(--font-lg);
+    color: var(--brand_color);
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+  }
+  h3 {
+    font-size: var(--font-md);
+    color: var(--brand_color);
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+  }
+  h4 {
+    font-size: var(--font-sm);
+    color: var(--brand_color);
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+  }
+  h5 {
+    font-size: var(--font-xxs);
+    color: var(--brand_color);
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+  }
+  p {
+    font-size: var(--font-xs);
+    color: var(--brand_color);
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+  }
 }
 
 /* LOGO FONT*/
