--- a/css/footer.css
+++ b/css/footer.css
@@ -1,13 +1,11 @@
 /* Footer */
-@media (max-width: 600px) {
-  footer {
-  }
-}
 footer {
   background-color: #fce0f9;
   padding-block: 50px;
   margin-inline: 0;
+  padding-inline: 1%;
 }
+
 footer p {
   color: #c1181c;
   font-family: "Poppins_Regular", sans-serif;
@@ -22,7 +20,7 @@ footer a {
   font-family: "Poppins_Regular", sans-serif;
   font-size: 15px;
   text-decoration: none;
-  padding-bottom: 6px;
+  padding-bottom: 2px;
   display: block;
   margin: 0;
 }
@@ -33,11 +31,20 @@ h5 {
   padding-bottom: 5%;
   font-family: "Poppins_Regular", sans-serif;
 }
+
 .grid_1_1_1_1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   justify-content: center;
+  place-content: center;
 }
-.box {
-  margin-left: 30px;
+
+@media (max-width: 700px) {
+  footer h5 {
+    font-size: 10px;
+  }
+  footer a,
+  footer p {
+    font-size: 8px;
+  }
 }
