--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -14,6 +14,10 @@ main > *,
   grid-column: 2/3;
 }
 
+.top_pic {
+  margin-top: 75px;
+}
+
 .top  {
   text-align: center;
   margin-bottom: 10px;
@@ -44,17 +48,13 @@ h1, h2, h3 {
   .minikager_1-1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding: 10px;
+    padding: 20px;
     padding-left: 80px;
+    gap: 10px;
   }
 }
 
 .overskrift_storkage {
-  text-align: center;
-  margin: 30px;
-}
-
-.pris_2 {
   text-align: center;
   margin: 30px;
 }
@@ -82,6 +82,7 @@ h1, h2, h3 {
 
 .col {
   width: 50%;
+  margin: 30px;
 }
 
 .kundebestilling {
