--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -15,7 +15,13 @@ main > *,
 }
 
 /*kontakt section*/
-@media (min-width: 800px) {
+@media (max-width: 600px) {
+  .grid_kontakt .boks a,
+  .grid_kontakt .boks p {
+    font-size: 15px;
+  }
+}
+@media (min-width: 700px) {
   .grid_kontakt {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -31,7 +37,7 @@ main > *,
   place-content: start;
   display: block;
   padding: 10px 0px 10px 10px;
-  font-size: 20px;
+  font-size: var(--font-xs);
   color: black;
   text-decoration: none;
   font-family: "Poppins_Regular", sans-serif;
@@ -40,7 +46,7 @@ main > *,
 .grid_kontakt p {
   color: black;
   padding: 10px 10px 0px 10px;
-  font-size: 20px;
+  font-size: var(--font-xs);
 }
 
 .grid_kontakt h3 {
@@ -53,7 +59,8 @@ main > *,
   display: flex;
   place-content: center;
   color: black;
-  padding-block: 5%;
+  padding-top: 5%;
+  padding-bottom: 2%;
 }
 
 .ios,
@@ -76,8 +83,10 @@ main > *,
   }
 }
 
-.grid_job .boks {
-  padding-left: 50px;
+@media (max-width: 600px) {
+  strong {
+    font-size: 15px;
+  }
 }
 
 .boks_order {
