--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -49,7 +49,6 @@ h1, h2, h3 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 20px;
-    padding-left: 80px;
     gap: 10px;
   }
 }
@@ -92,6 +91,8 @@ h1, h2, h3 {
 
 .kundebestilling {
   line-height: 40px;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .engros {
@@ -159,9 +160,10 @@ input:focus{
  outline: 3px solid #c1181c;
 }
 
-.grid_1-2 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 100px;
-}
-
+@media (min-width: 600px) {
+    .grid_1-2 {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 100px;
+  }
+} 
