--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -115,7 +115,7 @@ main > *,
   color: black;
 }
 
-.strong {
+.stillinger {
   font-family: "Poppins_Medium", sans-serif;
   font-weight: 800;
   text-align: center;
@@ -218,6 +218,7 @@ main > *,
 
 .boks_helligdag {
   background-color: #fce0f9;
+  transition: 0.3s;
 }
 
 .grid_butikker a {
@@ -230,6 +231,10 @@ main > *,
   font-family: "Poppins_Regular", sans-serif;
 }
 
+.boks_helligdag:hover {
+  transform: scale(1.1);
+}
+
 /*Forhandlere section*/
 
 @media (min-width: 1100px) {
@@ -239,11 +244,17 @@ main > *,
     gap: 10px;
   }
 }
-@media (min-width: 600px) and (max-width: 1100px) {
+@media (max-width: 1100px) {
   .grid_forhandlere {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
+  }
+}
+
+@media (max-width: 600px) {
+  .section4 h3 {
+    font-size: 20px;
   }
 }
 
@@ -270,7 +281,6 @@ main > *,
 }
 
 .grid_forhandlere h3 {
-  font-size: 30px;
   padding-block: 30px;
   padding-inline-start: 10px;
 }
