--- a/css/mutual.css
+++ b/css/mutual.css
@@ -156,14 +156,13 @@ header a {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
 }
-header a:visited {
+header a:active {
   color: var(--brand_color);
   font-size: 20px;
   padding-left: 80px;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  text-decoration: solid;
+  font-weight: 600;
 }
 
 /* burgermenu */
