--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -45,6 +45,13 @@ h1, h2, h3 {
 }
 
 @media (min-width: 600px) {
+  .mini_kager_1-1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px;
+    gap: 10px;
+  }
+
   .minikager_1-1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -167,3 +174,36 @@ input:focus{
       grid-gap: 100px;
   }
 } 
+
+@media (max-width: 600px) {
+  .col {
+      margin-inline: auto;
+  }
+
+  .minikager_1-1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 170px;
+  }
+
+  .kundebestilling {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .engros {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .engros_overskrift {
+    padding-left: 30px;
+  }
+
+  form {
+    padding-left: 30px;
+  }
+}
+
+
+
