--- a/css/mutual.css
+++ b/css/mutual.css
@@ -34,10 +34,14 @@ html {
 }
 */
 /*IMAGES*/
-img {
+img,
+video {
   width: 100%;
   height: auto;
   display: block;
+}
+video {
+  margin: 20px;
 }
 
 body {
