--- a/css/om_bagt.css
+++ b/css/om_bagt.css
@@ -6,10 +6,26 @@
 }*/
 
 .overskrift {
-    text-align: center;
-  }
+  text-align: center;
+}
 
-  .paragraf{
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
+.paragraf {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+main,
+.full {
+  display: grid;
+  grid-template-columns: 1fr minmax(0, 1100px) 1fr;
+}
+
+.full {
+  grid-column: 1/-1;
+}
+
+main > *,
+.full > * {
+  /* main > *, .full > * */
+  grid-column: 2/3;
+}
