--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -25,7 +25,7 @@ main > *,
 }
 
 .full {
-  background-color: #fce0f9;
+  background-color: var(--tertiary)
 }
 
 h1,
@@ -35,9 +35,9 @@ h3 {
   margin-bottom: 10px;
 }
 
-a {
-  display: inline;
-  color: #c1181c;
+.engros a, a, .kundebestilling a {
+ display: inline;
+  color: var(--brand_color);
   font-size: var(--font-sm);
   text-decoration: none;
 }
@@ -133,17 +133,17 @@ form {
 }
 
 input {
-  border: solid #fce0f9;
+  border: solid var(--tertiary);
   padding: 12px 0;
-  background-color: #fffacd;
-  border: 5px solid #fce0f9;
+  background-color: var(--secondary);
+  border: 5px solid var(--tertiary);
 }
 
 select {
-  color: #c1181c;
+  color: var(--brand_color);
   padding: 12px 20px;
-  background-color: #fffacd;
-  border: 5px solid #fce0f9;
+  background-color: var(--secondary);
+  border: 5px solid var(--tertiary);
 }
 
 #emne {
@@ -151,28 +151,28 @@ select {
 }
 
 #besked {
-  background-color: #fffacd;
+  background-color: var(--secondary);
   padding: 12px 0;
-  border: 5px solid #fce0f9;
+  border: 5px solid var(--tertiary);
 }
 
 .button {
-  background-color: #fce0f9;
+  background-color: var(--tertiary);
   padding: 15px;
   border-radius: 10px;
 }
 label {
   font-size: 15px;
-  color: #c1181c;
+  color: var(--brand_color);
   font-family: "Poppins_Regular", sans-serif;
 }
 
 input:focus {
-  outline: 3px solid #c1181c;
+  outline: 3px solid var(--brand_color);
 }
 
 #besked:focus {
-  outline: 3px solid #c1181c;
+  outline: 3px solid var(--brand_color);
 }
 
 @media (min-width: 600px) {
