--- a/css/om_bagt.css
+++ b/css/om_bagt.css
@@ -132,3 +132,22 @@ color:#F6E1F7;
   padding-block: 30px;
   padding-inline-start: 10px;
 }
+
+@media (min-width: 600px) {
+  .grid_1-2 {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+  .grid_1-2 img {
+    height: 350px;
+    width: 300px;
+  }
+  .grid_2-1 {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+  .grid_2-1 img {
+    height: 350px;
+    width: 300px;
+  }
+}
