--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -79,6 +79,7 @@ h3 {
 }*/
 
 .tekst_storkage {
+  text-align: center;
   padding-left: 20px;
   line-height: 30px;
 }
@@ -160,6 +161,7 @@ select {
   background-color: var(--tertiary);
   padding: 15px;
   border-radius: 10px;
+  color: var(--brand_color);
 }
 label {
   font-size: 15px;
@@ -175,6 +177,10 @@ input:focus {
   outline: 3px solid var(--brand_color);
 }
 
+.engros a {
+  font-family: "Poppins_Regular", sans-serif;
+  font-weight: 600;
+}
 @media (min-width: 600px) {
   .grid_1-2 {
     display: grid;
