--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -72,7 +72,7 @@ main > *,
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 60px;
-    padding-block: 60px;
+    padding-block: 40px;
   }
 
   .boks_order {
@@ -92,14 +92,14 @@ main > *,
 
 .section2 {
   background-color: #fce0f9;
-  padding: 30px;
 }
 
 .section2 img {
   object-fit: cover;
   aspect-ratio: 1/1;
   border-radius: 50%;
-  padding-inline: 20px;
+  margin-inline: auto;
+  width: 70%;
 }
 
 .grid_job p {
@@ -108,7 +108,6 @@ main > *,
 }
 
 .grid_job h2 {
-  padding-top: 70px;
   color: black;
 }
 
@@ -130,7 +129,7 @@ main > *,
 .section3 h2 {
   display: flex;
   place-content: center;
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 5%;
 }
 
@@ -276,7 +275,7 @@ main > *,
 .section4 h2 {
   display: flex;
   place-content: center;
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 5%;
 }
 
