--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -106,6 +106,11 @@ h3 {
   margin: 30px;
 }
 
+.col_ {
+  width: 50%;
+  margin: 30px;
+}
+
 .kundebestilling {
   line-height: 40px;
   margin-bottom: 15px;
@@ -189,15 +194,43 @@ input:focus {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .col {
     margin-inline: auto;
+    padding-top: 100px;
+  }
+
+  .col_ {
+    margin-inline: auto;
+    padding-top: 20px;
+    width: 50%;
+  }
+
+  .top {
+    margin-top: 30px;
+  }
+
+  .full {
+    padding: 30px;
+  }
+
+  .storekager_overskrift {
+    padding: 10px;
+  }
+
+  .minikager_overskrift {
+    padding-bottom: 30px;
+    margin-inline: start;
+  }
+
+  .pris_1 {
+    padding-bottom: 30px;
+    padding-left: 200px;
   }
 
   .minikager_1-1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding-left: 170px;
   }
 
   .kundebestilling {
