--- a/css/footer.css
+++ b/css/footer.css
@@ -44,10 +44,14 @@ h5 {
 
 @media (max-width: 700px) {
   footer h5 {
-    font-size: 10px;
+    font-size: 12px;
+  }
+
+  .grid_1_1_1_1 {
+    padding-left: 40px;
   }
   footer a,
   footer p {
-    font-size: 8px;
+    font-size: 10px;
   }
 }
