--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -6,7 +6,7 @@ main,
 
 .full {
   grid-column: 1/-1;
-  margin-top: 30px;
+  margin-top: 15px;
   margin-bottom: 50px;
 }
 
@@ -33,7 +33,12 @@ main > *,
 }
 
 .top_2 {
-  padding: 30px;
+  padding-top: 25px;
+  padding-bottom: 10px;
+}
+
+.storekager_overskrift {
+  padding-bottom: 10px;
 }
 
 .full {
