--- a/css/om_bagt.css
+++ b/css/om_bagt.css
@@ -21,8 +21,8 @@ main,
   grid-column: 1/-1;
 }
 
-main > *,
-.full > * {
+main>*,
+.full>* {
   /* main > *, .full > * */
   grid-column: 2/3;
 }
@@ -31,50 +31,52 @@ main > *,
 .overskrift {
   text-align: center;
   margin-top: 30px;
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
-  .paragraf{
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-
-  .grid_1-2 {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+.paragraf {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
+
+.grid_1-2 {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
 .grid_2-1 {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
 }
 
-.gridbillede{
-  padding:var(--space-md)
+.gridbillede {
+  padding: var(--space-md)
 }
+
 /*
 .pinktext{
   color:#F6E1F7
 }
 */
 .roed .grid_1-2 p {
-  padding:var(--space-sm);
-color:#F6E1F7;
+  padding: var(--space-sm);
+  color: #F6E1F7;
 }
 
 .roed .grid_1-2 h1 {
-  padding:var(--space-sm);
-  color:#F6E1F7;
-  }
+  padding: var(--space-sm);
+  color: #F6E1F7;
+}
 
-  .roed .grid_2-1 p {
-    padding:var(--space-sm);
-  color:#F6E1F7;
-  }
-  
-  .roed .grid_2-1 h1 {
-    padding:var(--space-sm);
-    color:#F6E1F7;
-    }
+.roed .grid_2-1 p {
+  padding: var(--space-sm);
+  color: #F6E1F7;
+}
+
+.roed .grid_2-1 h1 {
+  padding: var(--space-sm);
+  color: #F6E1F7;
+}
 
 .paragraf {
   margin-top: 30px;
@@ -82,7 +84,7 @@ color:#F6E1F7;
 }
 
 
-.roed{
+.roed {
   background-color: var(--brand_color);
   padding: var(--space-sm);
   margin-top: 0px;
@@ -97,6 +99,7 @@ color:#F6E1F7;
     gap: 10px;
   }
 }
+
 @media (max-width: 1100px) {
   .grid_forhandlere {
     display: grid;
@@ -110,11 +113,14 @@ color:#F6E1F7;
     font-size: 20px;
   }
 }
-@media (max-width: 600px){
-.grid_1-2,.grid_2-1 {
-  display: grid;
-  grid-template-columns: 1fr;
-}
+
+@media (max-width: 600px) {
+
+  .grid_1-2,
+  .grid_2-1 {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
 
 .grid_forhandlere {
@@ -144,12 +150,10 @@ color:#F6E1F7;
   padding-inline-start: 10px;
 }
 
-.vaerdier{
+.vaerdier {
   font-size: 28px;
 }
 
-#mel{
+#mel {
   padding-bottom: 40px;
 }
-
-
