--- a/css/mutual.css
+++ b/css/mutual.css
@@ -124,34 +124,11 @@ p {
 }
 
 /* Logo */
-@media (min-width: 600px) {
-  .logo {
-    width: 30%;
-    margin-inline-start: 45px;
-    margin-bottom: 8px;
-    margin-top: 20px;
-  }
-}
-
-@media (max-width: 600px) {
-  .logo {
-    width: 100%;
-    margin-inline-start: 15px;
-    margin-bottom: 5px;
-    margin-top: 10px;
-  }
-}
-
-/*header*/
-
-@media (max-width: 600px) {
-  .grid_header {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .burger {
-    margin-top: 23px;
-  }
+.logo {
+  width: 30%;
+  margin-inline-start: 30px;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 ul {
@@ -174,6 +151,15 @@ header a {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
+header a:active {
+  color: var(--brand_color);
+  font-size: 20px;
+  padding-left: 80px;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
 /* burgermenu */
 .main-menu ul {
   list-style: none;
@@ -198,14 +184,19 @@ header a {
   .toggle-btn {
     display: inline-block;
   }
-
+  /*
+  .main-menu.shown {
+    display: contents;
+  }
+  /* .main-menu ul {
+    display: none;
+  } */
   .main-menu ul {
     display: block;
     flex-flow: wrap;
     flex-basis: 100%;
   }
 }
-
 /* Burgermenu */
 .burger {
   width: 20px;
@@ -223,6 +214,6 @@ header a {
   padding: 20px;
 }
 .main-menu button {
-  margin-inline: 20px;
+  margin: 20px;
   padding-right: 10px;
 }
